// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentProfilePageComponent should snap with a student field without information 1`] = `
<tm-student-profile-page
  Gender={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  defaultPictureLink={[Function String]}
  editForm={[Function FormGroup]}
  id=""
  isLoadingStudentProfile={[Function Boolean]}
  isSavingProfileEdit="false"
  nationalitiesService={[Function NationalitiesService]}
  ngbModal={[Function NgbModal]}
  statusMessageService={[Function StatusMessageService]}
  student={[Function Object]}
  studentProfileService={[Function StudentProfileService]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-student-profile-page>
`;

exports[`StudentProfilePageComponent should snap with default fields 1`] = `
<tm-student-profile-page
  Gender={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  defaultPictureLink={[Function String]}
  id=""
  isLoadingStudentProfile={[Function Boolean]}
  isSavingProfileEdit="false"
  nationalitiesService={[Function NationalitiesService]}
  ngbModal={[Function NgbModal]}
  statusMessageService={[Function StatusMessageService]}
  studentProfileService={[Function StudentProfileService]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-student-profile-page>
`;

exports[`StudentProfilePageComponent should snap with values and a profile photo 1`] = `
<tm-student-profile-page
  Gender={[Function Object]}
  authService={[Function AuthService]}
  backendUrl={[Function String]}
  defaultPictureLink={[Function String]}
  editForm={[Function FormGroup]}
  id=""
  isLoadingStudentProfile={[Function Boolean]}
  isSavingProfileEdit="false"
  nationalities={[Function Array]}
  nationalitiesService={[Function NationalitiesService]}
  ngbModal={[Function NgbModal]}
  profilePicLink={[Function String]}
  statusMessageService={[Function StatusMessageService]}
  student={[Function Object]}
  studentProfileService={[Function StudentProfileService]}
>
  <tm-loading-spinner>
    <div
      class="loading-container"
    >
      <div
        class="row spinner-border text-primary"
        role="status"
      />
      <div
        class="row text-secondary"
      >
        Loading...
      </div>
    </div>
  </tm-loading-spinner>
</tm-student-profile-page>
`;
